k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet 
metadata:
  name: app-daemon
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
      containers:
        - name: app-daemon
          image: prom/node-exporter:latest
          ports:
            - containerPort: 9100
              hostProt: 9100
