k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: mi-namespace
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
